Introduce \Cat-levels